perf(analytics): optimize monthly revenue aggregation and introduce multi-period trend comparison